--- a/restaurant-client/bower.json
+++ b/restaurant-client/bower.json
@@ -10,7 +10,10 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-ui-router": "^1.0.3"
+    "angular-ui-router": "^1.0.3",
+    "components-font-awesome": "^4.7.0",
+    "angular-jk-rating-stars": "^1.0.7",
+    "ngmap": "^1.18.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
