--- a/restaurant-client/bower.json
+++ b/restaurant-client/bower.json
@@ -13,7 +13,8 @@
     "angular-ui-router": "^1.0.3",
     "components-font-awesome": "^4.7.0",
     "angular-jk-rating-stars": "^1.0.7",
-    "ngmap": "^1.18.4"
+    "ngmap": "^1.18.4",
+    "angularjs-google-maps": "^0.5.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -28,5 +29,8 @@
         "dist/js/bootstrap.js"
       ]
     }
+  },
+  "resolutions": {
+    "angular": "^1.4.0"
   }
 }
