--- a/restaurant-client/package.json
+++ b/restaurant-client/package.json
@@ -30,6 +30,7 @@
     "jasmine-core": "^2.6.1",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
+    "karma": "^1.7.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "time-grunt": "^1.0.0"
